k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: genetic-chatbot
  labels:
    app: genetic-chatbot
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: genetic-chatbot
